feat: add Jdbc sample